@@ -34,6 +34,13 @@
         <updatePolicy>never</updatePolicy>
       </releases>
     </repository>
+    <repository>
+      <id>geo-solutions-cache</id>
+      <url>https://repo.osgeo.org/repository/geo-solutions-cache/</url>
+      <releases>
+        <updatePolicy>never</updatePolicy>
+      </releases>
+    </repository>
   </repositories>
 
   <distributionManagement>
@@ -146,8 +153,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.5.0</version>
           <configuration>
-            <!-- Travis build workaround -->
-            <argLine>-Djava.awt.headless=true -Dfile.encoding=UTF-8 -Xms1024m -Xmx2048m --illegal-access=permit
+            <argLine>-Djava.awt.headless=true -Dfile.encoding=UTF-8 -Xms1024m -Xmx2048m
               --add-opens java.base/java.lang=ALL-UNNAMED
               --add-opens java.base/java.net=ALL-UNNAMED
               --add-opens java.base/java.util=ALL-UNNAMED
@@ -163,9 +169,7 @@
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>3.5.0</version>
           <configuration>
-            <argLine>
-              --illegal-access=permit
-            </argLine>
+            <argLine>${jvm.args}</argLine>
           </configuration>
         </plugin>
         <!-- reporting and site -->
@@ -392,7 +396,7 @@
           <dependency>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>extra-enforcer-rules</artifactId>
-            <version>1.6.2</version>
+            <version>1.8.0</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -507,7 +511,7 @@
       <dependency>
         <groupId>org.xmlunit</groupId>
         <artifactId>xmlunit-matchers</artifactId>
-        <version>2.9.1</version>
+        <version>2.10.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -1068,7 +1072,7 @@
       <dependency>
         <groupId>org.locationtech.jts</groupId>
         <artifactId>jts-core</artifactId>
-        <version>1.19.0</version>
+        <version>1.20.0</version>
       </dependency>
       <dependency>
         <groupId>it.geosolutions.jgridshift</groupId>
@@ -1094,7 +1098,7 @@
       <dependency>
         <groupId>it.geosolutions.imageio-ext</groupId>
         <artifactId>imageio-ext-utilities</artifactId>
-        <version>1.1.29</version>
+        <version>1.4.12</version>
         <exclusions>
           <exclusion>
             <groupId>javax.media</groupId>
@@ -1107,13 +1111,21 @@
           <exclusion>
             <groupId>javax.media</groupId>
             <artifactId>jai_imageio</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>javax.activation</groupId>
+            <artifactId>javax.activation-api</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
       <dependency>
         <groupId>it.geosolutions.imageio-ext</groupId>
         <artifactId>imageio-ext-tiff</artifactId>
-        <version>1.1.29</version>
+        <version>1.4.12</version>
         <exclusions>
           <exclusion>
             <groupId>javax.media</groupId>
@@ -1126,6 +1138,14 @@
           <exclusion>
             <groupId>javax.media</groupId>
             <artifactId>jai_imageio</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>javax.activation</groupId>
+            <artifactId>javax.activation-api</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
@@ -1207,7 +1227,7 @@
     <antlr.version>3.5.3</antlr.version>
     <oracle.version>23.4.0.24.05</oracle.version>
     <log4j.version>2.23.1</log4j.version>
-    <slf4j.version>2.0.13</slf4j.version>
+    <slf4j.version>2.0.16</slf4j.version>
     <spring-boot.version>3.3.0</spring-boot.version>
     <spring-batch.version>5.1.2</spring-batch.version>
     <spring-framework.version>6.1.8</spring-framework.version>
@@ -1215,6 +1235,7 @@
     <axiom.version>1.4.0</axiom.version>
     <jsonpath.version>2.9.0</jsonpath.version>
     <jsonsmart.version>2.5.1</jsonsmart.version>
+    <jvm.args>--add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/com.sun.imageio.spi=ALL-UNNAMED --add-exports java.desktop/sun.swing=ALL-UNNAMED --add-opens java.desktop/javax.imageio.spi=ALL-UNNAMED --add-opens java.desktop/com.sun.imageio.spi=ALL-UNNAMED</jvm.args>
   </properties>
 
   <modules>
